--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
   <h1>Hello, World!</h1>
   <p>Welcome to my first website hosted on GitHub Pages.</p>
+  <p>My first paragraph</p>
 </body>
 </html>
