--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 </head>
 <body>
   <h1>Hello, World!</h1>
-  <p>Welcome to my first website hosted on GitHub Pages.</p>
-  <p>My first paragraph</p>
+  <p>Welcome to my first website hosted on GitHub Pages. My name is Belal</p>
 </body>
 </html>
