--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
   <h1>Hello, World!</h1>
   <p>Welcome to my first website hosted on GitHub Pages. My name is Belal</p>
+  <p>My first paragraph.</p> 
 </body>
 </html>
